fixes to dark mode; fixes to import handling

--- a/src/index.css
+++ b/src/index.css
@@ -10,19 +10,29 @@ html, body, #root {
 }
 
 @media (prefers-color-scheme: dark) {
+  .rbc-time-content, .rbc-day-slot .rbc-time-slot {
+    background-color: #1a202c;
+  }
   .rbc-time-content {
-    border-top-color: #4a5568;
+    border-top-color: #2d3748;
   }
   .rbc-time-header-content, .rbc-time-content, .rbc-time-header-content .rbc-time-header-cell, .rbc-time-content > * {
-    border-color: #4a5568 !important;
+    border-color: #2d3748 !important;
   }
   .rbc-time-slot, .rbc-day-slot .rbc-time-slot {
-    border-color: #4a5568;
+    border-color: #2d3748;
   }
   .rbc-header {
-    border-bottom: 1px solid #4a5568;
+    border-bottom: 1px solid #2d3748;
+    background-color: #1a202c;
   }
   .rbc-time-gutter, .rbc-header {
-    color: #cbd5e0;
+    color: #a0aec0;
+  }
+  .rbc-time-gutter {
+    background-color: #1a202c;
+  }
+  .rbc-today {
+    background-color: #2d3748;
   }
 }
